--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Real-time Subgraph Explorer & Visualizer" />
+  <!-- <meta name="description" content="Real-time Subgraph Explorer & Visualizer" /> -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Real-time Subgraph Explorer & Visualizer" />
   <meta name="twitter:site" content="@dapplooker" />
@@ -15,7 +15,7 @@
     content="https://dapplooker.s3.amazonaws.com/assets/img/GraphLooker_theme_color_text.png" />
 
   <meta property="og:title" content="GraphLooker | Real-time Subgraph Explorer & Visualizer" />
-  <meta property="og:description" content="Real-time Subgraph Explorer & Visualizer" />
+  <!-- <meta property="og:description" content="Real-time Subgraph Explorer & Visualizer" /> -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://graphlooker.com" />
   <meta property="og:site_name" content="graphlooker.com" />
